css/game-pension-style.css
/* ... */
.category-bar {
  background-color: red;
  height: 10px;
  position: absolute;
  top: 35px;
  left: 80px;
}

@media screen and (max-width: 600px) {
  .imaginary-pension-text-cell {
    width: 100%;
  }

  .imaginary-pension-cell {
    width: 100%;
  }

  #PensionPrice {
    font-size: 25px;
    font-family: SparkasseRg;
    font-weight: normal;
  }
}


/* RESULT: QUESTION ANSWERS */

.question-image-container {
  width: 100%;
  height: 100%;
  position: relative;
  white-space: nowrap;
  font-size: 0;
}

.question-image-container img {
  width: 100%;
  height: auto;
  /* position: absolute; */
  left: 0;
  top: 0;
}

.question-image-container img:first-child {
  position: relative;
}

.slider-cell,
.image-cell,
.text-cell {
  height: 183px;
}

.slider-cell {
  padding-left: 60px;
  padding-right: 60px;
  width: 460px;
  padding-top: 65px;
}

.slider-cell .pension-question-slider {
  display: inline-block;
}

.image-cell {
  overflow: hidden;
  width: 280px;
}

.text-cell {
  width: 240px;
  padding-top: 14px;
}

.text-cell h3 {
  font-size: 26px;
  margin: 0;
  margin-bottom: 14px;
  line-height: normal;
}

.text-cell p {
  line-height: normal;
}

@media screen and (max-width: 999px) {
  .slider-cell {
    width: 50%;
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 0;
  }

  .image-cell {
    width: 20%;
    height: auto;
  }

  .text-cell {
    width: 30%;
    height: auto;
    padding-top: 14px;
  }
}

@media screen and (max-width: 600px) {
  .slider-cell,
  .image-cell,
  .text-cell {
    height: auto;
  }

  .slider-cell {
    width: 100%;
    line-height: 70px;
  }

  .image-cell {
    width: 45%;
    height: auto;
  }

  .text-cell {
    width: 55%;
    padding-top: 14px;
  }

  .text-cell h3 {
    font-size: 17px;
    margin-bottom: 14px;
    line-height: normal;
  }
}

.final-table {
  height: 100%;
  table-layout: fixed
}

.final-table tr {
  height: 100%;
}

.final-table h3 {
  color: red;
  margin: 0;
  margin-bottom: 14px;
}

td.final-slider {
  padding: 0 50px;
  /* min-width: 400px; */
  width: 50%;
}

.category-image {
  height: 200px;
  padding: 0 !important;
  /* max-width: 280px; */
  width: 25%;
  white-space: nowrap;
  overflow: hidden;
}

.category-image div {
  height: 100%;
  font-size: 0 !important;
  object-fit: contain;
  /* overflow: hidden; */
}

.category-image img {
  height: auto;
  width: 100%;
}

.pension-row {
  margin-bottom: 60px;
}

.pension-calculator-result-cell {
  width: 40%;
}

.pension-calculator-input-cell {
  width: 60%;
}

#ResultPension {
  color: red;
}

#PensionCalculatorInput label {
  color: #666666;
  display: block;
  font-size: 14px;
  font-weight: normal;
  margin-bottom: 14px;
}

.pension-calculator-result label {
  padding-right: 14px;
  margin-bottom: 20px;
}

#PensionCalculatorInput input[type=text] {
  border: 2px solid #777777;
  -webkit-border-radius: 5px;
      border-radius: 5px;
  color: red;
  padding: 5px;
  font-size: 17px;
  width: 45%;
}

.helper-button {
  border: 1px solid #777777;
  -webkit-border-radius: 50%;
      border-radius: 50%;
  color: #777777;
  cursor: pointer;
  display: inline-block;
  font-size: 10pt;
  line-height: 20px;
  width: 20px;
  height: 20px;
  margin-left: 10px;
  text-align: center;
}

.calculator-memo {
  margin-top: 50px;
  padding-right: 14px;
}

#PensionCalculatorInput h2 {
  margin-top: 3em;
  font-size: 18px;
  padding-right: 30px;
  margin-top: 60px;
}

@media screen and (max-width: 600px) {
  .pension-calculator-result-cell {
    display: table;
  }

  .pension-calculator-result {
    display: table-footer-group;
  }

  .calculator-memo {
    display: table-caption;
    width: 100%;
    margin-top: 10px;
    margin-bottom: 40px;
  }

  .pension-calculator-result-cell {
    width: 100%;
  }

  #PensionCalculatorInput label {
    font-size: 15px;
  }

  .pension-calculator-result label {
    float: left;
    width: 40%;
  }

  .pension-calculator-result input[type=text] {
    font-size: 17px;
    float: left;
  }

  .pension-calculator-input-cell {
    width: 100%;
  }

  .pension-calculator-input-cell label {
    margin-bottom: 40px;
  }
}

#ResultWorkYears,
#ResultPayment {
  margin-top: 20px;
  margin-right: 10px;
}

@media screen and (max-width: 600px) {
  #ResultWorkYears,
  #ResultPayment {
    margin: 40px 15px;
  }
}

#ResultWorkYears .min:after,
#ResultWorkYears .max:after,
#ResultWorkYears .value:after {
  content: " Jahre";
}

#ResultPayment .min:after,
#ResultPayment .max:after,
#ResultPayment .value:after {
  content: " Euro";
}


#GameOverScreen {
  /* padding: 0 30px 5px 30px; */
  margin-bottom: 0;
  padding-bottom: 0px;
}

#GameOverScreen h1 {
  font-size: 26px;
  color: red;
  margin-bottom: 20px;
  font-weight: bold;
  margin-top: 30px;
}

#GameOverScreen p {
  /* margin-bottom: 20px; */
  font-size: 18px;
  margin-bottom: 20px;
  line-height: 150%;
}

.ui-dialog {
    -webkit-box-shadow: 0px 0px 8px 0px rgba(50, 50, 50, 0.75);
    -moz-box-shadow:    0px 0px 8px 0px rgba(50, 50, 50, 0.75);
    box-shadow:         0px 0px 8px 0px rgba(50, 50, 50, 0.75);
}

.ui-widget-overlay {
    background: black;
}

